...
              enabled: true,
              child: const Icon(Icons.home),
            ),
            label: 'Inicio',
          ),
          BottomNavigationBarItem(
            key: const Key('nav_services'),
            icon: Semantics(
              label: 'nav_services',
              identifier: 'nav_services',
              button: true,
              enabled: true,
              child: const Icon(Icons.search),
            ),
            label: 'Servicios',
          ),
          BottomNavigationBarItem(
            key: const Key('nav_chat'),
            icon: Semantics(
              label: 'nav_chat',
              identifier: 'nav_chat',
              button: true,
              enabled: true,
              child: const Icon(Icons.chat),
            ),
            label: 'Chat',
          ),
          BottomNavigationBarItem(
            key: const Key('nav_profile'),
            icon: Semantics(
              label: 'nav_profile',
              identifier: 'nav_profile',
              button: true,
              enabled: true,
              child: const Icon(Icons.person),
...
